Fixing the center alignment

--- a/src/components/SkillUsageCard/SkillUsage.css
+++ b/src/components/SkillUsageCard/SkillUsage.css
@@ -41,5 +41,10 @@
   display: flex;
   justify-content: center;
   align-content: center;
-  padding-left: 12em;
+}
+@media screen and (max-width: 450px){
+	.pie-chart{
+		display: block;
+	}
+	
 }
